# VPD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  python_requirements.txt
python/: LSD.py  PCLines.py  denoise_lines.py  detect_vps.py  detect_vps_params.py  find_detections.py  mixtures.py
python/tests/: test_LSD.py  test_PCLines.py  test_VanishingPointDetector.py  test_alignments.py  test_denoise_lines.py  test_mixtures.py
python/tests/input_data/: test__LSDWrapper_full__lines_out.txt  test__PCLines_straight_all__straight__lines_in.txt  test__PCLines_straight_all__straight__lines_u_out.txt  test__PCLines_straight_all__straight__lines_v_out.txt  test__PCLines_straight_all__straight__points_in.txt  test__PCLines_straight_all__straight__points_u_out.txt  test__PCLines_straight_all__straight__points_v_out.txt  test__PCLines_straight_all__twisted__lines_in.txt  test__PCLines_straight_all__twisted__lines_u_out.txt  test__PCLines_straight_all__twisted__lines_v_out.txt  test__PCLines_straight_all__twisted__points_in.txt  test__PCLines_straight_all__twisted__points_u_out.txt  test__PCLines_straight_all__twisted__points_v_out.txt  test__compute_horizon_line_manhattan_Y_out.txt  test__compute_horizon_line_non_manhattan_Y_out.txt  test__convert_to_PClines_lines_in.txt  test__convert_to_PClines_points_straight_out.txt  test__convert_to_PClines_points_twisted_out.txt  test__denoise_lines__lines_in.txt  test__drawline_BW_out.tif  test__drawline_ind_out.txt  test__drawline_label_out.txt  test__line_to_homogeneous__lines_homog_out.txt  test__mixtures4__bestcov_out.txt  test__mixtures4__bestmu_out.txt  test__mixtures4__bestpairs_out.txt  test__mixtures4__randindex_in.txt  test__mixtures__points_in.txt  test__my_multinorm_data.npz  test__pyalignments_fast__candidate_points_in.txt  test__pyalignments_fast__detections_out.txt  test__pyalignments_fast__points_in.txt  test__pyalignments_slow__detections_out.txt  test__pyalignments_slow__points_in.txt
